--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ active: home
           {% for post in site.posts limit:10 %}
           <div class="row">
             <div class="span8">
-              <h2>{{ post.title }}</h2>
-              <h4>{{ post.date | date_to_long_string }}{% if post.categories != "" %} <small>/posted in: {{ post.categories }}</small>{% endif %}</h4>
+              <h2>{{ post.title }} {% if post.subtitle %}<small>{{ post.subtitle }}</small>{% endif %}</h2>
+              <h4>{{ post.date | date_to_long_string }}{% if post.categories != "" %} <small>/posted in: {{ post.categories | join: " / " | capitalize }}</small>{% endif %}</h4>
               {% if post.excerpt %}{{ post.excerpt | markdownify }}{% endif %}
               <p><a class="btn btn-small" href="{{ post.url }}">Read on &raquo;</a></p>
             </div>
