--- a/index.html
+++ b/index.html
@@ -14,3 +14,10 @@ active: home
             </div>
           </div>
           {% endfor %}
+
+          <div class="row">
+            <div class="span10">
+              <hr />
+              <p><a href="{{ site.url }}/blog/">More posts &raquo;</a></p>
+            </div>
+          </div>
