--- a/slides/advanced-vegan-webinar-2020/advanced-vegan.html
+++ b/slides/advanced-vegan-webinar-2020/advanced-vegan.html
@@ -50,9 +50,15 @@ Livestream will be recorded &amp;mdash; link will be emailed to you later today
 # Today's topics
 
 * Constrained ordination
-
     * Canonical Correspondence Analysis
 	* Redundancy Analysis
+	* Partial constrained ordination
+* Model Building
+    * Model selection
+* Permutation tests
+* Restricted permutation tests
+* PERMANOVA
+* Diagnostics
 
 ---
 class: inverse middle center subsection
@@ -2200,6 +2206,165 @@ adonis2(dune ~ Management + A1, data = dune.env, by = "margin")
 
 Anderson (2001) noted that PERMANOVA could confound *location* &amp; *dispersion* effects
 
+If one or more groups are more variable &amp;mdash; dispersed around the centroid &amp;mdash; than the others, this can result in a false detection of a difference of means &amp;mdash; a *location* effect
+
+Same problem affects *t* tests, ANOVA
+
+Warton et al (2012)
+Anderson &amp; Walsh (2013)
+Anderson *et al* (2017)
+
+---
+
+# Dispersion
+
+.center[
+![](advanced-vegan_files/figure-html/permanova-idea-plot-1.svg)&lt;!-- --&gt;
+]
+
+---
+
+# Test for dispersion effects
+
+Marti Anderson (2006) developed a test for multivariate dispersions &amp;mdash; PERMDISP2
+
+1. Calculate how far each observation is from its group median (or centroid)
+2. Take the absolute values of these distances-to-medians
+3. Do an ANOVA on the absolute distances with the *groups* as covariates
+4. Test the H&lt;sub&gt;0&lt;/sub&gt; of equal absolute distances to median among groups using a permutation test
+
+In *vegan* this is `betadisper()`
+
+---
+
+# Test for dispersion effects
+
+.row[
+.col-6[
+.not-so-small[
+
+```r
+data(varespec)
+dis &lt;- vegdist(varespec) # Bray-Curtis distances
+## First 16 sites grazed, remaining 8 sites ungrazed
+groups &lt;- factor(c(rep(1,16), rep(2,8)),
+                 labels = c("grazed","ungrazed"))
+
+mod &lt;- betadisper(dis, groups)
+mod
+```
+
+```
+## 
+## 	Homogeneity of multivariate dispersions
+## 
+## Call: betadisper(d = dis, group = groups)
+## 
+## No. of Positive Eigenvalues: 15
+## No. of Negative Eigenvalues: 8
+## 
+## Average distance to median:
+##   grazed ungrazed 
+##   0.3926   0.2706 
+## 
+## Eigenvalues for PCoA axes:
+## (Showing 8 of 23 eigenvalues)
+##  PCoA1  PCoA2  PCoA3  PCoA4  PCoA5  PCoA6  PCoA7  PCoA8 
+## 1.7552 1.1334 0.4429 0.3698 0.2454 0.1961 0.1751 0.1284
+```
+]
+]
+.col-6[
+
+```r
+boxplot(mod)
+```
+
+![](advanced-vegan_files/figure-html/permdisp-plot-1.svg)&lt;!-- --&gt;
+]
+]
+
+---
+
+# Test for dispersions
+
+.row[
+
+.col-6[
+.smaller[
+
+```r
+set.seed(25)
+permutest(mod)
+```
+
+```
+## 
+## Permutation test for homogeneity of multivariate dispersions
+## Permutation: free
+## Number of permutations: 999
+## 
+## Response: Distances
+##           Df  Sum Sq  Mean Sq      F N.Perm Pr(&gt;F)  
+## Groups     1 0.07931 0.079306 4.6156    999  0.045 *
+## Residuals 22 0.37801 0.017182                       
+## ---
+## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+```
+]
+]
+
+.col-6[
+
+```r
+plot(mod)
+```
+
+![](advanced-vegan_files/figure-html/permdisp-plot-it-1.svg)&lt;!-- --&gt;
+
+]
+]
+
+---
+
+# Test for dispersions
+
+
+```r
+set.seed(4)
+permutest(mod, pairwise = TRUE)
+```
+
+```
+## 
+## Permutation test for homogeneity of multivariate dispersions
+## Permutation: free
+## Number of permutations: 999
+## 
+## Response: Distances
+##           Df  Sum Sq  Mean Sq      F N.Perm Pr(&gt;F)  
+## Groups     1 0.07931 0.079306 4.6156    999  0.036 *
+## Residuals 22 0.37801 0.017182                       
+## ---
+## Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1
+## 
+## Pairwise comparisons:
+## (Observed p-value below diagonal, permuted p-value above diagonal)
+##           grazed ungrazed
+## grazed              0.043
+## ungrazed 0.04295
+```
+
+---
+
+# Test for locations with non-equal dispersion?
+
+Marti Anderson &amp; colleagues (2017) have proposed a solution that is related to the Berens-Fisher problem
+
+This is in Primer but not yet in *vegan*
+
+&lt;https://github.com/vegandevs/vegan/issues/344&gt;
+
 ---
 class: inverse middle center big-subsection
 
@@ -2316,7 +2481,9 @@ Vector fitting (`envfit()`) or biplot scores (`scores(model, display = "bp")`) a
 
 # Links
 
-I have several **vegan**-related posts on my blog. For a list of posts see [http://www.fromthebottomoftheheap.net/blog/]()
+I have several **vegan**-related posts on my blog.
+
+For a list of posts see [http://www.fromthebottomoftheheap.net/blog/]()
 
 ---
 
@@ -2352,10 +2519,16 @@ P&amp;eacute;ter S&amp;oacute;lymos
 
 # References
 
+.small[
 * Anderson, M.J., 2001. A new method for non-parametric multivariate analysis of variance. Austral Ecol. 26, 32&amp;ndash;46
+* Anderson, M.J., 2006. Distance-based tests for homogeneity of multivariate dispersions. Biometrics 62, 245&amp;ndash;253
+* Anderson, M.J., Walsh, D.C.I., 2013. PERMANOVA, ANOSIM, and the Mantel test in the face of heterogeneous dispersions: What null hypothesis are you testing? Ecol. Monogr. 83, 557&amp;ndash;574
+* Anderson, M.J., Walsh, D.C.I., Robert Clarke, K., Gorley, R.N., Guerra-Castro, E., 2017. Some solutions to the multivariate Behrens-Fisher problem for dissimilarity-based analyses. Aust. N. Z. J. Stat. 59, 57&amp;ndash;79
 * Blanchet, F.G., Legendre, P., Borcard, D., 2008. Forward selection of explanatory variables. Ecology 89, 2623&amp;ndash;2632
 * Legendre, P., Anderson, M.J., 1999. Distance-based redundancy analysis: testing multispecies responses in multifactorial ecological experiments. Ecol. Monogr. 69, 1&amp;ndash;24
 * McArdle, B.H., Anderson, M.J., 2001. Fitting Multivariate Models to Community Data: A Comment on Distance-Based Redundancy Analysis. Ecology 82, 290&amp;ndash;297
+* Warton, D.I., Wright, S.T., Wang, Y., 2012. Distance-based multivariate analyses confound location and dispersion effects. Methods Ecol. Evol. 3, 89&amp;ndash;101
+]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
